# gmail-agent

./: .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/components/: AgentInterface.tsx  AuthButton.tsx  EmailInterface.tsx  ThemeToggle.tsx
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
backend/app/api/routes/: agent.py  auth.py  emails.py
backend/app/config/: __init__.py  settings.py
backend/app/models/: agent.py  auth.py
backend/core/: agent.py  connection.py  constants.py  tools.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/auth/callback/: page.tsx
frontend/app/components/: AgentInterface.tsx  AuthButton.tsx  EmailInterface.tsx  ModeToggle.tsx
